--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600&family=Poppins:ital,wght@0,100;0,600;1,300;1,400;1,600&family=Varela&display=swap");
 body {
-  background: url("https://media.istockphoto.com/id/1411682102/photo/3d-abstract-colorful-background-suitable-for-magazine-covers-banners-and-brochures-3d-render.jpg?b=1&s=170667a&w=0&k=20&c=uIf4qSqwxGV8aObX-1fWAx7FEQ0bs7MNUYxWPmFIwK8=");
+  background: url("https://media.istockphoto.com/id/1291199071/vector/warm-to-cool-abstract-layered-wavy-background.jpg?s=612x612&w=0&k=20&c=ntRPfcqWkNjIu6XeeNyGxSNZb1Bo4rwYiiFM1NAEAE0=");
   background-size: cover;
   background-position: center;
   font-family: "Poppins", sans-serif;
