--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600&family=Poppins:ital,wght@0,100;0,600;1,300;1,400;1,600&family=Varela&display=swap");
 body {
-  background: url("https://media.istockphoto.com/id/1291199071/vector/warm-to-cool-abstract-layered-wavy-background.jpg?s=612x612&w=0&k=20&c=ntRPfcqWkNjIu6XeeNyGxSNZb1Bo4rwYiiFM1NAEAE0=");
+  background: url("https://4kwallpapers.com/images/wallpapers/macos-monterey-wwdc-21-stock-dark-mode-5k-4480x2520-5585.jpg");
   background-size: cover;
   background-position: center;
   font-family: "Poppins", sans-serif;
